fix: change extra margin

--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ details[open] summary {
 }
 
 .blocktext{
-    margin: 10px auto;
+    margin: 0 auto;
+    padding: 10px 0;
     width: 80%;
     max-width: 1360px;
 }
